--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -62,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=MainJFrame
+main.class=thesimpleems_16nov.MainJFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
